[package]
name = "hunter2"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elefren = { version = "0.22", features = ["env"] }
futures = "0.3" # For meilisearch_sdk to access async features
getopts = "0.2"
chrono = "0.4"
meilisearch-sdk = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
