[package]
name = "hunter2"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
elefren = { version = "0.22", features = ["env"] }
futures = "0.3" # For meilisearch_sdk to access async features
getopts = "0.2"
chrono = "0.4"
log = "0.4"
meilisearch-sdk = "0.20.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webfinger = "0.5"
scraper = "0.12.0"
error-chain = "0.12.4"

openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0"
dotenv = "0.15.0"
mockall = "0.11.2"
predicates = "2.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
