[package]
name = "hunter2"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
elefren = { git = "https://github.com/DeeUnderscore/elefren", rev = "bf16d2dbc7ba5e171dcbcd62da0a6e8cede77c02", features = ["env"] }
env_logger = "0.8"
error-chain = "0.12.4"
futures = "0.3" # For meilisearch_sdk to access async features
getopts = "0.2"
lazy_static = "1.4.0"
log = "0.4"
meilisearch-sdk = "0.20.1"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
reqwest = "0.11.12"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webfinger = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.11.2"
predicates = "2.1"
tokio = { version = "1.20.3", features = ["macros", "rt-multi-thread"] }
